--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -167,7 +167,7 @@ a.article:hover {
     display: none;
   }
 }
-/*.su-back{
-  background-image: url("~src/assets/pricing-table7.webp");
-  background-size: 100vmax;
-}*/
+//.su-back{
+//  background-image: url("~src/assets/pricing-table7.webp");
+//  background-size: 100vmax;
+//}
