--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addForm">
+<!--<form [formGroup]="addForm">
   <div class="row">
     <div class="col-md-12">
       <div class="col-md-4">
@@ -34,5 +34,46 @@
   </div>
 
   <button nbButton Class="btn btn-warning" (click)="addLogin()">Sign In</button>
-</form>
+</form>-->
 
+<div class="form-box">
+  <div class="header-text" style="color: white">
+    Login Form
+  </div>
+  <form [formGroup]="addForm">
+    <div class="row">
+      <div class="col-md-12">
+          <div class="form-group">
+            <label className='form-label' style="color: white; font-size: large">User Name</label><br>
+            <input required type="text"
+                   class='form-control'
+                   [ngClass]="{ 'is-invalid': submitted && addFormControl['username']?.errors, 'is-valid': addFormControl['username']?.valid }"
+                   formControlName='username' ngModel><br>
+            <span
+              *ngIf="submitted || addFormControl['username'].touched || addFormControl['username'].dirty && addFormControl['username'].invalid"
+              class="info-msg text-danger">
+                <small *ngIf="addFormControl['username'].errors && addFormControl['username'].errors?.['required']">UserName is required</small>
+            </span>
+          </div>
+          <pre></pre>
+          <div class="form-group">
+            <label className='form-label' style="color: white; font-size: large" >Password</label><br>
+            <input required type="password"
+                   class='form-control'
+                   [ngClass]="{ 'is-invalid': submitted && addFormControl['password']?.errors, 'is-valid': addFormControl['password']?.valid }"
+                   formControlName='password' ngModel/><br>
+            <span
+              *ngIf="submitted || addFormControl['password'].touched || addFormControl['password'].dirty && addFormControl['password'].invalid"
+              class="info-msg text-danger">
+                <small *ngIf="addFormControl['password'].errors && addFormControl['password'].errors?.['required']">Password is required</small>
+            </span>
+          </div>
+          <pre></pre>
+        </div>
+
+      </div>
+
+
+    <button nbButton Class="btn btn-warning" (click)="addLogin()">Sign In</button>
+  </form>
+</div>
