--- a/src/app/add-organization/add-organization.component.html
+++ b/src/app/add-organization/add-organization.component.html
@@ -1,5 +1,6 @@
+<nb-card class="container-fluid" style="background-color: #47748b">
 <form [formGroup]="addForm">
-  <div class="row">
+  <div class="row col-md-12">
     <div class="col-md-4">
       <div class="form-group">
         <label for="organizationName">Organization Name</label>
@@ -73,9 +74,7 @@
     </div>
   </div>
 </form>
-
-
-
+</nb-card>
 
 
 
