removed unnecessary things

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="form-box">
   <form [formGroup]="addForm">
     <div class="row col-md-12">
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label style="color: white; font-size: large" for="fullName">Full Name</label>
           <input class='form-control'
@@ -16,7 +16,7 @@
             </span>
         </div>
       </div>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label style="color: white; font-size: large" for="designation">Designation</label>
           <input class="form-control"
@@ -31,7 +31,7 @@
             </span>
         </div>
       </div>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label for="email" style="color: white; font-size: large">Email</label>
           <input (focusout)="getOrganizationByEmail($event)" class="form-control"
@@ -49,7 +49,7 @@
             </span>
         </div>
       </div>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label for="mobile" style="color: white; font-size: large">Mobile</label>
           <input class="form-control"
@@ -64,7 +64,7 @@
             </span>
         </div>
       </div>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label for="userName" style="color: white; font-size: large">UserName</label>
           <input class="form-control" id="userName"
@@ -82,7 +82,7 @@
 
         </div>
       </div>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label for="password" style="color: white; font-size: large">Password</label>
           <input class="form-control" id="password"
@@ -98,7 +98,7 @@
         </div>
       </div>
       <pre></pre>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label for="passwordConfirm" style="color: white; font-size: large">Confirm Password</label>
           <input class="form-control"
@@ -117,7 +117,7 @@
             </span>
         </div>
       </div>
-      <div class="div col-md-6">
+      <div class="col-md-6">
         <div class="form-group">
           <label for="organizationName" style="color: white; font-size: large">Organization Name</label>
           <select class="form-control  form-control-tiny mt-2" formControlName="organizationName" id="organizationName">
