--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -48,7 +48,7 @@ body {
   border-radius: 5px;
   width: 100%;
   //font-size: 18px;
-  font-family: poppins;
+  font-family: poppins, cursive;
 }
 .form-box input[type=checkbox] {
   display: none;
