--- a/src/app/add-organization/add-organization.component.html
+++ b/src/app/add-organization/add-organization.component.html
@@ -1,81 +1,80 @@
-<nb-card class="container-fluid" style="background-color: #47748b">
-<form [formGroup]="addForm">
-  <div class="row col-md-12">
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="organizationName">Organization Name</label>
-        <input class='form-control' id="organizationName"
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['organizationName']?.errors, 'is-valid': addFormControl['organizationName']?.valid }"
-               formControlName='organizationName'>
-        <span
-          *ngIf="submitted || addFormControl['organizationName'].touched || addFormControl['organizationName'].dirty && addFormControl['organizationName'].invalid"
-          class="info-msg text-danger">
+<div class="form-box">
+  <form [formGroup]="addForm">
+    <div class="row col-md-12">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="organizationName" style="color: white; font-size: large">Organization Name</label>
+          <input class='form-control' id="organizationName"
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['organizationName']?.errors, 'is-valid': addFormControl['organizationName']?.valid }"
+                 formControlName='organizationName'>
+          <span
+            *ngIf="submitted || addFormControl['organizationName'].touched || addFormControl['organizationName'].dirty && addFormControl['organizationName'].invalid"
+            class="info-msg text-danger">
                 <small
                   *ngIf="addFormControl['organizationName'].errors && addFormControl['organizationName'].errors?.['required']">Organization Name is required.</small>
             </span>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="address">Address</label>
-        <input id="address"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['address']?.errors, 'is-valid': addFormControl['address']?.valid }"
-               formControlName='address'/>
-        <span
-          *ngIf="submitted || addFormControl['address'].touched || addFormControl['address'].dirty && addFormControl['address'].invalid"
-          class="info-msg text-danger">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="address" style="color: white; font-size: large">Address</label>
+          <input id="address"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['address']?.errors, 'is-valid': addFormControl['address']?.valid }"
+                 formControlName='address'/>
+          <span
+            *ngIf="submitted || addFormControl['address'].touched || addFormControl['address'].dirty && addFormControl['address'].invalid"
+            class="info-msg text-danger">
                 <small *ngIf="addFormControl['address'].errors && addFormControl['address'].errors?.['required']">Address is required.</small>
             </span>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="phone">Phone</label><br>
-        <input type="number"
-               id="phone"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['phone']?.errors, 'is-valid': addFormControl['phone']?.valid }"
-               formControlName='phone' ngModel/>
-        <span
-          *ngIf="submitted || addFormControl['phone'].touched || addFormControl['phone'].dirty && addFormControl['phone'].invalid"
-          class="info-msg text-danger">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="phone" style="color: white; font-size: large">Phone</label><br>
+          <input type="number"
+                 id="phone"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['phone']?.errors, 'is-valid': addFormControl['phone']?.valid }"
+                 formControlName='phone' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['phone'].touched || addFormControl['phone'].dirty && addFormControl['phone'].invalid"
+            class="info-msg text-danger">
                 <small *ngIf="addFormControl['phone'].errors && addFormControl['phone'].errors?.['required']">Phone Number is required.</small>
             </span>
+        </div>
       </div>
-    </div><pre></pre>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="email">Email</label><br>
-        <input type="email"
-               id="email"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['email']?.errors, 'is-valid': addFormControl['email']?.valid }"
-               formControlName='email' ngModel/>
-        <span
-          *ngIf="submitted || addFormControl['email'].touched || addFormControl['email'].dirty && addFormControl['email'].invalid"
-          class="info-msg text-danger">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="email" style="color: white; font-size: large">Email</label><br>
+          <input type="email"
+                 id="email"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['email']?.errors, 'is-valid': addFormControl['email']?.valid }"
+                 formControlName='email' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['email'].touched || addFormControl['email'].dirty && addFormControl['email'].invalid"
+            class="info-msg text-danger">
                 <small *ngIf="addFormControl['email'].errors && addFormControl['email'].errors?.['required']">Email is required. </small>
             </span>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="website" style="color: white; font-size: large">Website</label><br>
+          <input id="website"
+                 class='form-control'
+                 formControlName='website' ngModel/>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+          <button nbButton Class="btn btn-secondary" (click)="addOrganization()">Add Organization</button>
+        </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="website">Website</label><br>
-        <input id="website"
-               class='form-control'
-               formControlName='website' ngModel/>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 d-flex justify-content-end">
-        <button nbButton Class="btn btn-secondary" (click)="addOrganization()">Add Organization</button>
-      </div>
-    </div>
-  </div>
-</form>
-</nb-card>
-
+  </form>
+</div>
 
 
 
