--- a/src/app/request-clarification/request-clarification.component.html
+++ b/src/app/request-clarification/request-clarification.component.html
@@ -1,107 +1,114 @@
-<form [formGroup]="addForm">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="subject">Subject </label>
-        <input class='form-control' id="subject"
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['subject']?.errors, 'is-valid': addFormControl['subject']?.valid }"
-               formControlName='subject'>
-        <span
-          *ngIf="submitted || addFormControl['subject'].touched || addFormControl['subject'].dirty && addFormControl['subject'].invalid"
-          class="info-msg text-danger">
+<div class="container-fluid">
+  <form [formGroup]="addForm">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="subject">Subject </label>
+          <input class='form-control' id="subject"
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['subject']?.errors, 'is-valid': addFormControl['subject']?.valid }"
+                 formControlName='subject'>
+          <span
+            *ngIf="submitted || addFormControl['subject'].touched || addFormControl['subject'].dirty && addFormControl['subject'].invalid"
+            class="info-msg text-danger">
                 <small
                   *ngIf="addFormControl['subject'].errors && addFormControl['subject'].errors?.['required']">Subject is required.</small>
             </span>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="clarificationRequested">Clarification Request</label>
-        <input id="clarificationRequested"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['clarificationRequested']?.errors, 'is-valid': addFormControl['clarificationRequested']?.valid }"
-               formControlName='clarificationRequested'/>
-        <span
-          *ngIf="submitted || addFormControl['clarificationRequested'].touched || addFormControl['clarificationRequested'].dirty && addFormControl['clarificationRequested'].invalid"
-          class="info-msg text-danger">
-                <small *ngIf="addFormControl['clarificationRequested'].errors && addFormControl['clarificationRequested'].errors?.['required']">Clarification Request is required.</small>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="clarificationRequested">Clarification Request</label>
+          <input id="clarificationRequested"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['clarificationRequested']?.errors, 'is-valid': addFormControl['clarificationRequested']?.valid }"
+                 formControlName='clarificationRequested'/>
+          <span
+            *ngIf="submitted || addFormControl['clarificationRequested'].touched || addFormControl['clarificationRequested'].dirty && addFormControl['clarificationRequested'].invalid"
+            class="info-msg text-danger">
+                <small
+                  *ngIf="addFormControl['clarificationRequested'].errors && addFormControl['clarificationRequested'].errors?.['required']">Clarification Request is required.</small>
             </span>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="module">Module</label><br>
-        <input id="module"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['module']?.errors, 'is-valid': addFormControl['module']?.valid }"
-               formControlName='module' ngModel/>
-        <span
-          *ngIf="submitted || addFormControl['module'].touched || addFormControl['module'].dirty && addFormControl['module'].invalid"
-          class="info-msg text-danger">
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="module">Module</label><br>
+          <input id="module"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['module']?.errors, 'is-valid': addFormControl['module']?.valid }"
+                 formControlName='module' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['module'].touched || addFormControl['module'].dirty && addFormControl['module'].invalid"
+            class="info-msg text-danger">
                 <small *ngIf="addFormControl['module'].errors && addFormControl['module'].errors?.['required']">Module is required.</small>
             </span>
+        </div>
       </div>
-    </div><pre></pre>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="requestedBy">Requested By</label><br>
-        <input id="requestedBy"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['requestedBy']?.errors, 'is-valid': addFormControl['requestedBy']?.valid }"
-               formControlName='requestedBy' ngModel/>
-        <span
-          *ngIf="submitted || addFormControl['requestedBy'].touched || addFormControl['requestedBy'].dirty && addFormControl['requestedBy'].invalid"
-          class="info-msg text-danger">
-                <small *ngIf="addFormControl['requestedBy'].errors && addFormControl['requestedBy'].errors?.['required']">Requested By is required. </small>
+      <pre></pre>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="requestedBy">Requested By</label><br>
+          <input id="requestedBy"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['requestedBy']?.errors, 'is-valid': addFormControl['requestedBy']?.valid }"
+                 formControlName='requestedBy' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['requestedBy'].touched || addFormControl['requestedBy'].dirty && addFormControl['requestedBy'].invalid"
+            class="info-msg text-danger">
+                <small
+                  *ngIf="addFormControl['requestedBy'].errors && addFormControl['requestedBy'].errors?.['required']">Requested By is required. </small>
             </span>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <label for="requestedTo">Requested To</label>
-      <select class="form-control  form-control-tiny" formControlName="requestedTo" id="requestedTo">
-        <option [value]="null" selected hidden>User List</option>
-        <option *ngFor="let user of userData"
-                [ngValue]="user">
-          {{user.userName}}
-      </select>
-    </div>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="expectedDateForClosure">Expected Date For Closure</label><br>
-        <input id="expectedDateForClosure"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['expectedDateForClosure']?.errors, 'is-valid': addFormControl['expectedDateForClosure']?.valid }"
-               formControlName='expectedDateForClosure' ngModel/>
-        <span
-          *ngIf="submitted || addFormControl['expectedDateForClosure']?.touched || addFormControl['expectedDateForClosure']?.dirty && addFormControl['expectedDateForClosure'].invalid"
-          class="info-msg text-danger">
-                <small *ngIf="addFormControl['expectedDateForClosure']?.errors && addFormControl['expectedDateForClosure'].errors?.['required']">Date is required. </small>
+      <div class="col-md-4">
+        <label for="requestedTo">Requested To</label>
+        <select class="form-control  form-control-tiny" formControlName="requestedTo" id="requestedTo">
+          <option [value]="null" selected hidden>User List</option>
+          <option *ngFor="let user of userData"
+                  [ngValue]="user">
+            {{user.userName}}
+        </select>
+      </div>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="expectedDateForClosure">Expected Date For Closure</label><br>
+          <input id="expectedDateForClosure"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['expectedDateForClosure']?.errors, 'is-valid': addFormControl['expectedDateForClosure']?.valid }"
+                 formControlName='expectedDateForClosure' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['expectedDateForClosure']?.touched || addFormControl['expectedDateForClosure']?.dirty && addFormControl['expectedDateForClosure'].invalid"
+            class="info-msg text-danger">
+                <small
+                  *ngIf="addFormControl['expectedDateForClosure']?.errors && addFormControl['expectedDateForClosure'].errors?.['required']">Date is required. </small>
             </span>
+        </div>
       </div>
-    </div><pre></pre>
-    <div class="col-md-4">
-      <div class="form-group">
-        <label for="emailReference">Email Reference</label><br>
-        <input id="emailReference"
-               class='form-control'
-               [ngClass]="{ 'is-invalid': submitted && addFormControl['emailReference']?.errors, 'is-valid': addFormControl['emailReference']?.valid }"
-               formControlName='emailReference' ngModel/>
-        <span
-          *ngIf="submitted || addFormControl['emailReference']?.touched || addFormControl['emailReference']?.dirty && addFormControl['emailReference'].invalid"
-          class="info-msg text-danger">
-                <small *ngIf="addFormControl['emailReference'].errors && addFormControl['emailReference'].errors?.['required']">Email is required. </small>
+      <pre></pre>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label for="emailReference">Email Reference</label><br>
+          <input id="emailReference"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['emailReference']?.errors, 'is-valid': addFormControl['emailReference']?.valid }"
+                 formControlName='emailReference' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['emailReference']?.touched || addFormControl['emailReference']?.dirty && addFormControl['emailReference'].invalid"
+            class="info-msg text-danger">
+                <small
+                  *ngIf="addFormControl['emailReference'].errors && addFormControl['emailReference'].errors?.['required']">Email is required. </small>
             </span>
+        </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-12 d-flex justify-content-end">
-        <button nbButton Class="btn btn-secondary" (click)="addRequestClarification()">Add Clarification</button>
+      <div class="row">
+        <div class="col-md-12 d-flex justify-content-end">
+          <button nbButton Class="btn btn-secondary" (click)="addRequestClarification()">Add Clarification</button>
+        </div>
       </div>
     </div>
-  </div>
-</form>
-
+  </form>
+</div>
 
 
 
