--- a/src/app/request-clarification/request-clarification.component.html
+++ b/src/app/request-clarification/request-clarification.component.html
@@ -90,10 +90,12 @@
           <label for="emailReference">Email Reference</label><br>
           <input id="emailReference"
                  class='form-control'
-                 [ngClass]="{ 'is-invalid': submitted && addFormControl['emailReference']?.errors, 'is-valid': addFormControl['emailReference']?.valid }"
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['emailReference']?.errors,
+                 'is-valid': addFormControl['emailReference']?.valid }"
                  formControlName='emailReference' ngModel/>
           <span
-            *ngIf="submitted || addFormControl['emailReference']?.touched || addFormControl['emailReference']?.dirty && addFormControl['emailReference'].invalid"
+            *ngIf="submitted || addFormControl['emailReference']?.touched ||
+            addFormControl['emailReference']?.dirty && addFormControl['emailReference'].invalid"
             class="info-msg text-danger">
                 <small
                   *ngIf="addFormControl['emailReference'].errors && addFormControl['emailReference'].errors?.['required']">Email is required. </small>
